--- a/Parte 4/space_invaders.lpi
+++ b/Parte 4/space_invaders.lpi
@@ -275,7 +275,7 @@
     </Other>
   </CompilerOptions>
   <Debugging>
-    <Exceptions Count="3">
+    <Exceptions Count="4">
       <Item1>
         <Name Value="EAbort"/>
       </Item1>
@@ -285,6 +285,9 @@
       <Item3>
         <Name Value="EFOpenError"/>
       </Item3>
+      <Item4>
+        <Name Value="ERangeError"/>
+      </Item4>
     </Exceptions>
   </Debugging>
 </CONFIG>
