Player Shots Emiting Smoke
- TShot was modified to emit smoke particles
- Diretory sctructre is being modifed (work in progress)

--- a/Parte 6/project/XE3/space_invaders.dproj
+++ b/Parte 6/project/XE3/space_invaders.dproj
@@ -94,18 +94,24 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="..\..\units\scenes\scnGamePlay.pas"/>
-        <DCCReference Include="..\..\units\scenes\scnIntro.pas"/>
-        <DCCReference Include="..\..\units\scenes\scnMainMenu.pas"/>
-        <DCCReference Include="..\..\units\scenes\scnParticles.pas"/>
         <DCCReference Include="..\..\units\sdlGameEnemies.pas"/>
-        <DCCReference Include="..\..\units\sdlGameObjects.pas"/>
         <DCCReference Include="..\..\units\sdlGamePlayer.pas"/>
         <DCCReference Include="..\..\units\sdlGameSound.pas"/>
         <DCCReference Include="..\..\units\sdlGameText.pas"/>
         <DCCReference Include="..\..\units\sdlGameTexture.pas"/>
         <DCCReference Include="..\..\units\sdlGameTypes.pas"/>
         <DCCReference Include="..\..\units\sdlGameUtils.pas"/>
+        <DCCReference Include="..\..\units\engine\sdlGame.pas"/>
+        <DCCReference Include="..\..\units\engine\sdlParticles.pas"/>
+        <DCCReference Include="..\..\units\engine\sdlScene.pas"/>
+        <DCCReference Include="..\..\units\game\objects\Shots.pas"/>
+        <DCCReference Include="..\..\units\engine\sdlGameObjects.pas"/>
+        <DCCReference Include="..\..\units\game\scenes\scnGamePlay.pas"/>
+        <DCCReference Include="..\..\units\game\scenes\scnIntro.pas"/>
+        <DCCReference Include="..\..\units\game\scenes\scnMainMenu.pas"/>
+        <DCCReference Include="..\..\units\game\scenes\scnParticles.pas"/>
+        <DCCReference Include="..\..\units\engine\sdlEngine.pas"/>
+        <DCCReference Include="..\..\units\game\siGame.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
