--- a/Parte 6/project/XE3/space_invaders.dproj
+++ b/Parte 6/project/XE3/space_invaders.dproj
@@ -81,7 +81,7 @@
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
         <VerInfo_Locale>1033</VerInfo_Locale>
-        <DCC_ExeOutput>D:\Documentos\GitHub\building-a-game-in-pascal\Parte 6\bin\</DCC_ExeOutput>
+        <DCC_ExeOutput>..\..\bin\</DCC_ExeOutput>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
