--- a/Parte 5/space_invaders.lpi
+++ b/Parte 5/space_invaders.lpi
@@ -126,11 +126,11 @@
           <Version Value="11"/>
           <PathDelim Value="\"/>
           <Target>
-            <Filename Value="space_invaders"/>
+            <Filename Value="bin\\space_invaders_$(TargetOS)_$(TargetCPU)"/>
           </Target>
           <SearchPaths>
             <IncludeFiles Value="$(ProjOutDir)"/>
-            <OtherUnitFiles Value="units;units\engine;units\scenes"/>
+            <OtherUnitFiles Value="units;units\engine;units\scenes;headers\sdl2"/>
             <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
           </SearchPaths>
           <CodeGeneration>
@@ -276,7 +276,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="headers\SDL2;units;units\engine;units\scenes"/>
+      <OtherUnitFiles Value="units;units\engine;units\scenes;headers\sdl2"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Parsing>
