--- a/Parte 7/project/Delphi 10/space_invaders.dproj
+++ b/Parte 7/project/Delphi 10/space_invaders.dproj
@@ -122,6 +122,7 @@
         <DCCReference Include="..\..\units\engine\sdlEngine.pas"/>
         <DCCReference Include="..\..\units\game\siGame.pas"/>
         <DCCReference Include="..\..\units\game\objects\StartField.pas"/>
+        <DCCReference Include="..\..\units\sdlGameHigSocre.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -148,7 +149,7 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
-                <DeployFile LocalName="Win32\Debug\space_invaders.exe" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="..\..\bin\space_invaders.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>space_invaders.exe</RemoteName>
                         <Overwrite>true</Overwrite>
@@ -574,6 +575,7 @@
                 <Platform value="Win32">True</Platform>
                 <Platform value="Win64">False</Platform>
             </Platforms>
+            <ModelSupport>False</ModelSupport>
         </BorlandProject>
         <ProjectFileVersion>12</ProjectFileVersion>
     </ProjectExtensions>
